--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
 file(GLOB_RECURSE SRC "*.cpp" "*.h")
 
+include_directories(${Qt5Core_INCLUDE_DIRS})
+
 add_executable(alsaPlayground ${SRC})
 
-target_link_libraries(alsaPlayground asound)
+target_link_libraries(alsaPlayground
+        asound
+        Qt5::Core)
