--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,13 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -pthread")
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+#install libfreetype6-dev
+
 
 include(cmake/qt.cmake)
 include(cmake/functions.cmake)
+
+set(FREETYPE_INCLUDE_DIRS /usr/include/freetype2 /usr/include/libpng16)
 
 add_subdirectory(src)
 
