--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,10 @@ set(TARGET_NAME alsaPlayground)
 
 add_executable(${TARGET_NAME} main.cpp)
 
-target_include_directories(${TARGET_NAME} PUBLIC ${ROOT_INCLUDE_DIR} ${QT_INCLUDES})
+target_include_directories(${TARGET_NAME} PUBLIC
+        ${ROOT_INCLUDE_DIR}
+        ${QT_INCLUDES}
+        ${FREETYPE_INCLUDE_DIRS})
 
 target_link_libraries(${TARGET_NAME}
         mainlib
