Added logging dependency

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,10 +9,12 @@ add_executable(${TARGET_NAME} main.cpp)
 target_include_directories(${TARGET_NAME} PUBLIC
         ${ROOT_INCLUDE_DIR}
         ${QT_INCLUDES}
-        ${FREETYPE_INCLUDE_DIRS})
+        ${FREETYPE_INCLUDE_DIRS}
+        ${log4cplus_INCLUDES})
 
 target_link_libraries(${TARGET_NAME}
         mainlib
         asound
-        ${QT_LIBS})
+        ${QT_LIBS}
+        ${log4cplus_LIBS})
 
