--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -pthread")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #install libfreetype6-dev
 
-
-include(cmake/qt.cmake)
 include(cmake/functions.cmake)
+include(cmake/qt.cmake)
+include(cmake/log4cplus.cmake)
 
 set(FREETYPE_INCLUDE_DIRS /usr/include/freetype2 /usr/include/libpng16)
 
