chords being played!
utest

--- a/src/mainlib/audio/note/test/CMakeLists.txt
+++ b/src/mainlib/audio/note/test/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_qtest(ID ChordBuilder_UTest
         SOURCES ChordBuilder_UTest.cpp ChordBuilder_UTest.h
         SRC_FOLDER src/mainlib/audio/note/test )
+
+add_qtest(ID ChordSignal_UTest
+        SOURCES ChordSignal_UTest.cpp ChordSignal_UTest.h
+        SRC_FOLDER src/mainlib/audio/note/test )
