--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -pthread")
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #install libfreetype6-dev
+#install also: apt install libasound2-dev mesa-common-dev libglu1-mesa-dev
+#In order to run, on xubuntu was required: sudo apt install libqt5gui5 .
 
 include(cmake/qt.cmake)
 include(cmake/log4cplus.cmake)
