removed old dependency

--- a/src/mainlib/CMakeLists.txt
+++ b/src/mainlib/CMakeLists.txt
@@ -14,5 +14,6 @@ target_link_libraries(${TARGET_NAME}
         ${QT_LIBS}
         freetype)
 
+# Despite their name, these classes are closer of being auxiliary applications than actual unit tests
 add_subdirectory(math/dft/test)
 add_subdirectory(audio/note/test)
