Removed environment variable, set qt platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 
 cmake_policy(SET CMP0072 NEW)
 
-#set(CMAKE_VERBOSE_MAKEFILE ON)
+# set(CMAKE_VERBOSE_MAKEFILE ON)
 
 project(aixa)
 
@@ -18,10 +18,11 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #In order to run, on xubuntu was required: sudo apt install libqt5gui5 qtmultimedia5-dev
 # I question the following: libqt5multimedia5 libqt5multimedia5-plugins .
 
-set(DEPS_DIR $ENV{AIXA_DEPENDENCIES_DIR} CACHE PATH "Directory with dependencies")
-if (NOT IS_DIRECTORY ${DEPS_DIR})
+if ((NOT DEFINED AIXA_DEPENDENCIES_DIR) OR (NOT IS_DIRECTORY ${AIXA_DEPENDENCIES_DIR}))
     message(FATAL_ERROR "Dependencies directory has not been set, or does not point to a valid directory")
 endif()
+
+set(DEPS_DIR ${AIXA_DEPENDENCIES_DIR} CACHE PATH "Directory with dependencies")
 
 include(cmake/qt.cmake)
 include(cmake/functions.cmake)
