final win definitions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.14)
 
 cmake_policy(SET CMP0072 NEW)
 
-project(aixa)
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 1)
+set(VERSION_PATCH 0)
+project(aixa VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
 enable_testing()
 
@@ -15,6 +18,8 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #install also: apt install libasound2-dev mesa-common-dev libglu1-mesa-dev
 #In order to run, on xubuntu was required: sudo apt install libqt5gui5 qtmultimedia5-dev
 # I question the following: libqt5multimedia5 libqt5multimedia5-plugins .
+# https://www.msys2.org/#installation
+# https://github.com/ubawurinna/freetype-windows-binaries
 
 if ((NOT DEFINED AIXA_DIR) OR (NOT IS_DIRECTORY ${AIXA_DIR}))
     message(FATAL_ERROR "Dependencies directory has not been set, or does not point to a valid directory")
