Feature/cmake environment (#15)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.14)
 
 cmake_policy(SET CMP0072 NEW)
 
-#set(CMAKE_VERBOSE_MAKEFILE ON)
-
-project(aixa)
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 1)
+set(VERSION_PATCH 0)
+project(aixa VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
 
 enable_testing()
 
@@ -15,15 +16,38 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -pthread")
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 #install libfreetype6-dev
 #install also: apt install libasound2-dev mesa-common-dev libglu1-mesa-dev
-#In order to run, on xubuntu was required: sudo apt install libqt5gui5 .
+#In order to run, on xubuntu was required: sudo apt install libqt5gui5 qtmultimedia5-dev
+# I question the following: libqt5multimedia5 libqt5multimedia5-plugins .
+# https://www.msys2.org/#installation
+# https://github.com/ubawurinna/freetype-windows-binaries
+# libxcb-xinerama0
+
+#cmake
+#g++ 10.2.0
+#mesa-common-dev
+#libfreetype-dev
+#qtbase5-dev
+#qtmultimedia5-dev
+#
+#download qt
+#only Desktop component is needed
+#
+#cmake -DCMAKE_BUILD_TYPE=Debug -DAIXA_DIR=/home/base/aixa ../../aixa/
+#sudo apt install qt5dxcb-plugin <--- this one!
+#
+#../build/release/src/aixa
+
+
+if ((NOT DEFINED AIXA_DIR) OR (NOT IS_DIRECTORY ${AIXA_DIR}))
+    message(FATAL_ERROR "Dependencies directory has not been set, or does not point to a valid directory")
+endif()
+
+set(DEPS_DIR ${AIXA_DIR}/deps CACHE PATH "Directory with dependencies")
 
 include(cmake/qt.cmake)
-include(cmake/log4cplus.cmake)
-
+include(cmake/freetype.cmake)
 include(cmake/functions.cmake)
 include(cmake/tests.cmake)
-
-set(FREETYPE_INCLUDE_DIRS /usr/include/freetype2 /usr/include/libpng16)
 
 add_subdirectory(src)
 
